eclipse-workspace/.metadata/.plugins/org.eclipse.cdt.ui/ClasePunteros.build.log
16:25:30 **** Rebuild of configuration Debug for project ClasePunteros ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\ClasePunteros.o" "..\\src\\ClasePunteros.c" 
..\src\ClasePunteros.c:186:155: warning: "/*" within comment [-Wcomment]
  printf("\npunteroPuntero - valor: %p, valor de lo apuntado: %p y valor de lo apuntado apuntado: %d", punteroPuntero, *punteroPuntero, **punteroPuntero); /*
                                                                                                                                                            
..\src\ClasePunteros.c:187:1: warning: "/*" within comment [-Wcomment]
 /*
  
..\src\ClasePunteros.c:234:1: error: expected identifier or '(' before '}' token
 }
 ^

16:25:31 Build Failed. 1 errors, 2 warnings. (took 636ms)

